# lerobot_teleoperator_nao_ik

./: README.md  pyproject.toml  requirements.txt
lerobot_teleoperator_nao_ik/: __init__.py  config_nao_ik_teleop.py  nao_ik_teleop.py
lerobot_teleoperator_nao_ik/pyroki_snippets/: __init__.py  _solve_ik.py
